infrastructure/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: credit-frontend-service
spec:
  type: ClusterIP
  selector:
    app: credit-frontend
  ports:
    - port: 8501
      targetPort: 8501
