infrastructure/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: credit-api-service
spec:
  type: ClusterIP
  selector:
    app: credit-api
  ports:
  - port: 80
    targetPort: 8000
